Wed Jun 23 14:51:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/footprint_stats.sh:
          Added strategies library and corrected locations of valuetype
          and rtscheduler library

Wed Jun 23 06:52:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lite.h:
        * ace/README:
          Changed ACE_HAS_MEMORY_PROFILER to ACE_INITIALIZE_MEMORY_BEFORE_USE.
          The last says better what we do. This define is then set when
          running with valgrind or purify. Thanks to Chris Cleeland for
          the suggestion

Tue Jun 22 16:54:35 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:
	  Changed ACE_HAS_LIMITED_RUSAGE_T and ACE_HAS_BROKEN_SETRLIMIT
	  checks to include <sys/time.h> before <sys/resource.h>.
	  Changed ACE_HAS_BROKEN_WRITEV check to use !ACE_LACKS_UNISTD_H
	  instead of ACE_HAS_UNISTD_H (which is never set).

Tue Jun 22 13:54:36 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/config-macosx-panther.h:
	* ace/config-macosx.h:
	  Changed to define only ACE_HAS_TIMEZONE_GETTIMEOFDAY.
	  ACE_HAS_VOIDPTR_GETTIMEOFDAY had also been defined.

Tue Jun 22 12:33:49 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/OS_NS_macros.h (ACE_SOCKCALL_RETURN):

	  Reverted my change that turned the C style cast into a
	  static_cast<> in the Win32 case.   ACE uses Win32 HANDLES (a
	  void * type), and MSVC++ 6 won't accept a static_cast<> from a
	  pointer type to an integral type.

Tue Jun 22 07:27:27 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:
	* ace/OS_NS_sys_time.inl:
	* ace/README:
	* ace/config-cygwin32.h:
	* ace/config-hpux-10.x.h:
	* ace/config-hpux-11.00.h:
	* ace/config-hpux11.h:
	* ace/config-linux-common.h:
	* ace/config-macosx-panther.h:
	* ace/config-macosx.h:
	* ace/config-rtems.h:
	* ace/config-sco-4.2-nothread.h:
	* ace/config-sco-5.0.0-mit-pthread.h:
	* ace/config-sunos4-lucid3.2.h:
	* ace/config-sunos4-sun3.x.h:
	* ace/config-sunos4-sun4.1.4.h: