@@ -1895,6 +1895,7 @@ Thomas Rohner <thomas dot rohner at hp dot com>
 Ken Descoteaux <ken at proquent dot com>
 Claas-Hinrich Dommreis <chdommreis at t-online dot de>
 Yateen Joshi <yjoshi at nulinkinc dot com>
+Sergei Kuchin <skuchin at mqsoftware dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
